mitad de validacion de errores POST

--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -10,7 +10,7 @@
 
         /*let tarea = "aprender React";*/
 
-        fetch("/api-todo", {
+        fetch("/api-todo/crear", {
             method :  "POST"
         })
         .then(respuesta => respuesta.text())
