--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
 
-        /*let tarea = "aprender React";*/
+        let tarea = "aprender React";
 
         fetch("/api-todo/crear", {
             method :  "POST"
