--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -11,7 +11,11 @@
         let tarea = "aprender React";
 
         fetch("/api-todo/crear", {
-            method :  "POST"
+            method :  "POST",
+            body : JSON.stringify({tarea}),
+            headers : {
+                "Content-type" : "application/json"
+            }
         })
         .then(respuesta => respuesta.text())
         .then(respuesta => console.log(respuesta));
