--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -8,14 +8,14 @@
 <body>
     <script>
 
-        let tarea = "repasar React";
+        let tarea = "salir a merendar";
 
-        fetch("/api-todo/borrar/2", {
-            method :  "DELETE",
-            /*body : JSON.stringify({tarea}),
+        fetch("/api-todo/actualizar/1/1", {
+            method :  "PUT",
+            body : JSON.stringify({tarea}),
             headers : {
                 "Content-type" : "application/json"
-            }*/
+            }
         })
         .then(respuesta => respuesta.text())
         .then(respuesta => console.log(respuesta));
